# cosette-rs

./: .gitignore  Cargo.toml
cosette-protocol/: Cargo.toml  build.rs
cosette-protocol/include/: mod.rs
cosette-protocol/include/google/: mod.rs  protobuf.rs
cosette-protocol/include/takasho/: mod.rs
cosette-protocol/include/takasho/schema/: custom_option.rs  mod.rs
cosette-protocol/include/takasho/schema/common_featureset/: mod.rs
cosette-protocol/include/takasho/schema/common_featureset/gmtool/: mod.rs
cosette-protocol/include/takasho/schema/common_featureset/gmtool/player_storage/: mod.rs
cosette-protocol/include/takasho/schema/common_featureset/player_api/: debug.rs  mod.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/: mod.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/account_termination/: v1.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/achievement/: v1.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/announcement/: mod.rs  v1.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/baas_product/: v1.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/box_loot_box/: v1.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/compensation/: v1.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/consume_resource_set/: v1.rs
cosette-protocol/include/takasho/schema/common_featureset/resource/feature_receivable_time_type/: v1.rs
cosette-protocol/include/takasho/schema/score/: mod.rs  player_api.rs
cosette-protocol/include/takasho/schema/score/resource_cn/: mod.rs
cosette-protocol/include/takasho/schema/takt/: db.rs  mod.rs
cosette-protocol/include/takasho/schema/takt/resource_cn/: mod.rs
cosette-protocol/src/: lib.rs  main.rs
cosette-sdkserver/: Cargo.toml
cosette-sdkserver/src/: main.rs
(+309 files in other folders)
