[workspace]
resolver = "2"
members = ["cosette-protocol", "cosette-gameserver", "cosette-sdkserver", "cosette-dispatchserver","common"]

[workspace.dependencies]
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
    "std",
    "tracing",
    "tracing-log",
] }

common = { version = "0.1.0", path = "common" }
