[package]
name = "cosette-protocol"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
prost-types = "0.11"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.12"
walkdir = "2"
