[package]
name = "cosette-sdkserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
    "std",
    "tracing",
    "tracing-log",
] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0.114"
