[package]
name = "cosette-sdkserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
    "std",
    "tracing",
    "tracing-log",
] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde_json = "1.0.114"
chrono = { version = "0.4", features = ["alloc"] }
hex = "0.4"
aes = "0.8"
block-modes = "0.8"
rand = "0.8"
snap = "1.1"
hmac = "0.12"
sha2 = "0.10"
cbc = "0.1.2"
cipher = "0.4"
